<resources>
    <string name="app_name">Hotel App</string>
    <string name="title_activity_table_select">TableSelect</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="default_quantity">00</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cancel">Cancel</string>
    <string name="place">Place</string>
    <string name="order_food">Order Food</string>
    <string name="view_bill">View Bill</string>
    <string name="call_waiter">Call Waiter</string>
</resources>